# geonetwork-gcmd-extractor

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.json
nlp/: grouping.py
outputs/pre-generated/: unique_gcmd_keywords.csv  unique_gcmd_keywords.xlsx  unique_gcmd_thesaurus.csv  unique_gcmd_thesaurus.xlsx
pre-generated/: .~lock.non_unique_gcmd_keywords.csv#  gcmd_keywords_include_gcmd_palaeo_temporal_coverage.txt  non_unique_full_term_gcmd_keywords.xlsx  non_unique_gcmd_keywords.csv  non_unique_gcmd_keywords.xlsx  non_unique_last_term_word_gcmd_keywords.xlsx  only_gcmd_keywords.txt  unique_gcmd_keywords.csv  unique_gcmd_keywords.xlsx  unique_gcmd_thesaurus.csv  unique_gcmd_thesaurus.xlsx
pregenerated/: is_harvested_by_identifier.xlsx  non_unique_full_term_gcmd_keywords.xlsx  unique_gcmd_keywords.xlsx  unique_gcmd_thesaurus.xlsx
processor/: processor.py
scripts/: download_spacy_model.py
utils/: nlp_grouping.py
