[tool.poetry]
name = "geonetwork-gcmd-extractor"
version = "0.1.0"
description = "A tool for extracting GCMD keywords of GeoNetwork records with CSW harvester"
authors = ["Viet Nguyen"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
owslib = {git = "https://github.com/geopython/OWSLib", rev = "master"}
black = "^24.4.2"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
